clang/test/BSC/Negative/borrow_owned_mixed.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// Test cases for structs with both _Borrow and _Owned fields
// Rule: _Borrow fields MUST be initialized, _Owned fields CAN be uninitialized

struct BorrowAndOwned {
    int *_Borrow b;
    int *_Owned o;
};

void test_basic_mixed() {
    int x = 0;

    // expected-error@+1 {{variable declarations of _Borrow qualified must be initialized}}
    struct BorrowAndOwned m1;  // _Borrow field not initialized

    // expected-error@+1 {{variable declarations of _Borrow qualified must be initialized}}
    struct BorrowAndOwned m2 = {};  // _Borrow field not initialized

    // expected-error@+1 {{variable declarations of _Borrow qualified must be initialized}}
    struct BorrowAndOwned m3 = {.o = nullptr};  // _Borrow field not initialized

    // OK: _Borrow initialized, _Owned can be uninitialized
    struct BorrowAndOwned m4 = {.b = &_Mut x};

    // OK: both initialized
    struct BorrowAndOwned m5 = {.b = &_Mut x, .o = nullptr};

    // OK: positional
    struct BorrowAndOwned m6 = {&_Mut x, nullptr};
}

struct MultipleMixed {
    int *_Borrow b1;
    int *_Owned o1;
    int *_Borrow b2;
    int *_Owned o2;
};

void test_multiple_mixed() {
    int x = 0, y = 0;

    // expected-error@+1 {{variable declarations of _Borrow qualified must be initialized}}
    struct MultipleMixed m1;

    // expected-error@+1 {{variable declarations of _Borrow qualified must be initialized}}
    struct MultipleMixed m2 = {.b1 = &_Mut x};  // b2 not initialized

    // expected-error@+1 {{variable declarations of _Borrow qualified must be initialized}}
    struct MultipleMixed m3 = {.b1 = &_Mut x, .o1 = nullptr};  // b2 not initialized

    // expected-error@+1 {{variable declarations of _Borrow qualified must be initialized}}
    struct MultipleMixed m4 = {.o1 = nullptr, .o2 = nullptr};  // both _Borrow not initialized

    // OK: all _Borrow initialized, _Owned can be left out
    struct MultipleMixed m5 = {.b1 = &_Mut x, .b2 = &_Mut y};

    // OK: all initialized
    struct MultipleMixed m6 = {.b1 = &_Mut x, .o1 = nullptr, .b2 = &_Mut y, .o2 = nullptr};
}

struct InnerMixed {
    int *_Borrow b;
    int *_Owned o;
};

struct OuterMixed {
    int a;
    struct InnerMixed inner;
    int *_Owned outer_o;
};

void test_nested_mixed() {
    int x = 0;

    // expected-error@+1 {{variable declarations of _Borrow qualified must be initialized}}
    struct OuterMixed o1;  // inner.b not initialized

    // expected-error@+1 {{variable declarations of _Borrow qualified must be initialized}}
    struct OuterMixed o2 = {.a = 1};  // inner.b not initialized

    // expected-error@+1 {{variable declarations of _Borrow qualified must be initialized}}
    struct OuterMixed o3 = {.a = 1, .outer_o = nullptr};  // inner.b not initialized

    // expected-error@+1 {{variable declarations of _Borrow qualified must be initialized}}
    struct OuterMixed o4 = {.a = 1, .inner = {.o = nullptr}};  // inner.b not initialized

    // OK: _Borrow initialized, _Owned fields can be omitted
    struct OuterMixed o5 = {.a = 1, .inner = {.b = &_Mut x}};

    // OK: all initialized
    struct OuterMixed o6 = {.a = 1, .inner = {.b = &_Mut x, .o = nullptr}, .outer_o = nullptr};

    // OK: positional
    struct OuterMixed o7 = {1, {&_Mut x, nullptr}, nullptr};
}

struct Level3Mixed {
    int *_Borrow b;
    int *_Owned o;
};

struct Level2Mixed {
    int *_Owned o;
    struct Level3Mixed l3;
};

struct Level1Mixed {
    int *_Borrow b;
    struct Level2Mixed l2;
};

void test_deep_mixed() {
    int x = 0, y = 0;

    // expected-error@+1 {{variable declarations of _Borrow qualified must be initialized}}
    struct Level1Mixed v1;  // l1.b and l2.l3.b not initialized

    // expected-error@+1 {{variable declarations of _Borrow qualified must be initialized}}
    struct Level1Mixed v2 = {.b = &_Mut x};  // l2.l3.b not initialized

    // expected-error@+1 {{variable declarations of _Borrow qualified must be initialized}}
    struct Level1Mixed v3 = {.b = &_Mut x, .l2 = {.o = nullptr}};  // l2.l3.b not initialized

    // expected-error@+1 {{variable declarations of _Borrow qualified must be initialized}}
    struct Level1Mixed v4 = {.l2 = {.l3 = {.b = &_Mut y}}};  // l1.b not initialized

    // OK: all _Borrow fields initialized
    struct Level1Mixed v5 = {.b = &_Mut x, .l2 = {.l3 = {.b = &_Mut y}}};

    // OK: all fields initialized
    struct Level1Mixed v6 = {.b = &_Mut x, .l2 = {.o = nullptr, .l3 = {.b = &_Mut y, .o = nullptr}}};
}

struct Interleaved {
    int *_Owned o1;
    int *_Borrow b1;
    int regular;
    int *_Owned o2;
    int *_Borrow b2;
    int *_Owned o3;
};

void test_interleaved() {
    int x = 0, y = 0;

    // expected-error@+1 {{variable declarations of _Borrow qualified must be initialized}}
    struct Interleaved i1;

    // expected-error@+1 {{variable declarations of _Borrow qualified must be initialized}}
    struct Interleaved i2 = {.o1 = nullptr, .regular = 0};  // _Borrow fields not initialized

    // expected-error@+1 {{variable declarations of _Borrow qualified must be initialized}}
    struct Interleaved i3 = {.b1 = &_Mut x};  // b2 not initialized

    // OK: all _Borrow initialized, _Owned can be omitted
    struct Interleaved i4 = {.b1 = &_Mut x, .b2 = &_Mut y};

    // OK: all initialized
    struct Interleaved i5 = {.o1 = nullptr, .b1 = &_Mut x, .regular = 0,
                              .o2 = nullptr, .b2 = &_Mut y, .o3 = nullptr};

    // OK: positional
    struct Interleaved i6 = {nullptr, &_Mut x, 0, nullptr, &_Mut y, nullptr};
}

struct ConstBorrowOwned {
    const int *_Borrow cb;
    int *_Borrow b;
    int *_Owned o;
};

void test_const_borrow_owned() {
    int x = 0, y = 0;

    // expected-error@+1 {{variable declarations of _Borrow qualified must be initialized}}
    struct ConstBorrowOwned c1;

    // expected-error@+1 {{variable declarations of _Borrow qualified must be initialized}}
    struct ConstBorrowOwned c2 = {.cb = &_Const x};  // b not initialized

    // expected-error@+1 {{variable declarations of _Borrow qualified must be initialized}}
    struct ConstBorrowOwned c3 = {.b = &_Mut y};  // cb not initialized

    // OK: both _Borrow initialized
    struct ConstBorrowOwned c4 = {.cb = &_Const x, .b = &_Mut y};

    // OK: all initialized
    struct ConstBorrowOwned c5 = {.cb = &_Const x, .b = &_Mut y, .o = nullptr};
}

struct Node {
    int *_Owned data;
    int *_Borrow parent;
    struct {
        int *_Borrow left;
        int *_Borrow right;
    } children;
};

void test_tree_node() {
    int p = 0, l = 0, r = 0;

    // expected-error@+1 {{variable declarations of _Borrow qualified must be initialized}}
    struct Node n1;  // _Borrow fields not initialized

    // expected-error@+1 {{variable declarations of _Borrow qualified must be initialized}}
    struct Node n2 = {.data = nullptr};  // _Borrow fields not initialized

    // expected-error@+1 {{variable declarations of _Borrow qualified must be initialized}}
    struct Node n3 = {.parent = &_Mut p};  // children not initialized

    // expected-error@+1 {{variable declarations of _Borrow qualified must be initialized}}
    struct Node n4 = {.parent = &_Mut p, .children = {.left = &_Mut l}};  // right not initialized

    // OK: all _Borrow initialized
    struct Node n5 = {.parent = &_Mut p, .children = {.left = &_Mut l, .right = &_Mut r}};

    // OK: with _Owned field too
    struct Node n6 = {.data = nullptr, .parent = &_Mut p,
                      .children = {.left = &_Mut l, .right = &_Mut r}};
}
